--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,32 +1,49 @@
-background            #252b35
-foreground            #eaeaea
-cursor                #d9002f
-selection_background  #194080
-color0                #181818
-color8                #181818
-color1                #bf081d
-color9                #bf081d
-color2                #3d9751
-color10               #3d9751
-color3                #f6bb33
-color11               #f6bb33
-color4                #16b1df
-color12               #16b1df
-color5                #772fb0
-color13               #772fb0
-color6                #8bd1ed
-color14               #8bd1ed
-color7                #ffffff
-color15               #ffffff
-selection_foreground #252b35
-selection_foreground #191919
+background #090200
+foreground #a4a1a1
+cursor #a4a1a1
+selection_background #494542
+// Black
+color0 #090200 
+// Grey
+color8 #5b5754
+// Blue
+color1 #da2c20
+// Light Blue
+color9 #e8bacf
+// Green
+color2 #00a152
+// Light Green
+color10 #3a3332
+// Aqua
+color3 #fcec02
+// Light Aqua
+color11 #494542
+// Red
+color4 #00a0e4
+// Light Red
+color12 #7f7c7b 
+// Purple
+color5 #a06994
+// Light Purple
+color13 #d6d4d3
+// Yellow
+color6 #b5e4f4
+// Light Yellow
+color14 #ccab53
+// White
+color7 #a4a1a1
+// Bright White
+color15 #f7f7f7
 
 font_family Cascadia Mono
-font_size 16.0
-adjust_line_height 110% 
+font_size 14.0
+adjust_line_height 100% 
 cursor_shape beam 
 enable_audio_bell no
 bell_on_tab no
 remember_window_size no 
-initial_window_width 700 
-initial_window_height 350
+initial_window_width 600 
+initial_window_height 600
+background_opacity=1.0
+
+allow_remote_control yes
