changes to fish

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,37 +2,37 @@ background #090200
 foreground #a4a1a1
 cursor #a4a1a1
 selection_background #494542
-// Black
+# Black
 color0 #090200 
-// Grey
+# Grey
 color8 #5b5754
-// Blue
+# Blue
 color1 #da2c20
-// Light Blue
+# Light Blue
 color9 #e8bacf
-// Green
+# Green
 color2 #00a152
-// Light Green
+# Light Green
 color10 #3a3332
-// Aqua
+# Aqua
 color3 #fcec02
-// Light Aqua
+# Light Aqua
 color11 #494542
-// Red
+# Red
 color4 #00a0e4
-// Light Red
+# Light Red
 color12 #7f7c7b 
-// Purple
+# Purple
 color5 #a06994
-// Light Purple
+# Light Purple
 color13 #d6d4d3
-// Yellow
+# Yellow
 color6 #b5e4f4
-// Light Yellow
+# Light Yellow
 color14 #ccab53
-// White
+# White
 color7 #a4a1a1
-// Bright White
+# Bright White
 color15 #f7f7f7
 
 font_family Cascadia Mono
@@ -45,5 +45,19 @@ remember_window_size no
 initial_window_width 600 
 initial_window_height 600
 background_opacity=1.0
-
 allow_remote_control yes
+
+# Keyboard config
+clear_all_shortcuts yes
+  // Copy/Paste
+map f1 copy_to_clipboard
+map f2 paste_from_clipboard
+map ctrl+shift+c copy_to_clipboard
+map ctrl+shift+v paste_from_clipboard
+  # Zoom
+map ctrl+shift+minus change_font_size all -2.0
+map ctrl+shift+equal change_font_size all +2.0
+map ctrl+shift+backspace change_font_size all 0
+
+
+
