--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,39 +1,25 @@
-background #090200
-foreground #a4a1a1
-cursor #a4a1a1
-selection_background #494542
-# Black
-color0 #090200 
-# Grey
-color8 #5b5754
-# Blue
-color1 #da2c20
-# Light Blue
-color9 #e8bacf
-# Green
-color2 #00a152
-# Light Green
-color10 #3a3332
-# Aqua
-color3 #fcec02
-# Light Aqua
-color11 #494542
-# Red
-color4 #00a0e4
-# Light Red
-color12 #7f7c7b 
-# Purple
-color5 #a06994
-# Light Purple
-color13 #d6d4d3
-# Yellow
-color6 #b5e4f4
-# Light Yellow
-color14 #ccab53
-# White
-color7 #a4a1a1
-# Bright White
-color15 #f7f7f7
+
+background            #0d0f18
+foreground            #fffaf3
+cursor                #ff0017
+selection_background  #002a3a
+color0                #222222
+color8                #444444
+color1                #ff000f
+color9                #ff273f
+color2                #8ce00a
+color10               #abe05a
+color3                #ffb900
+color11               #ffd141
+color4                #008df8
+color12               #0092ff
+color5                #6c43a5
+color13               #9a5feb
+color6                #00d7eb
+color14               #67ffef
+color7                #ffffff
+color15               #ffffff
+selection_foreground #0d0f18
 
 font_family Cascadia Mono
 font_size 14.0
