--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,25 +1,52 @@
+background #363537
+foreground #f7f1ff
 
-background            #0d0f18
-foreground            #fffaf3
-cursor                #ff0017
-selection_background  #002a3a
-color0                #222222
-color8                #444444
-color1                #ff000f
-color9                #ff273f
-color2                #8ce00a
-color10               #abe05a
-color3                #ffb900
-color11               #ffd141
-color4                #008df8
-color12               #0092ff
-color5                #6c43a5
-color13               #9a5feb
-color6                #00d7eb
-color14               #67ffef
-color7                #ffffff
-color15               #ffffff
-selection_foreground #0d0f18
+cursor #f7f1ff
+cursor_text_color #000000
+selection_foreground #363537
+selection_background #f7f1ff
+
+# dull black
+color0 #363537
+# light black
+color8 #69676c
+
+# dull red
+color1 #fc618d
+# light red
+color9 #fc618d
+
+# dull green
+color2 #7bd88f
+# light green
+color10 #7bd88f
+
+# yellow
+color3 #fce566
+# light yellow
+color11 #fce566
+
+# blue
+color4 #fd9353
+# light blue
+color12 #fd9353
+
+# magenta
+color5 #948ae3
+# light magenta
+color13 #948ae3
+
+# cyan
+color6 #5ad4e6
+# light cyan
+color14 #5ad4e6
+
+# dull white
+color7 #f7f1ff
+# bright white
+color15 #f7f1ff
+
+
 
 font_family Cascadia Mono
 font_size 16.0
