--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,62 +1,63 @@
-background #363537
-foreground #f7f1ff
+# gruvbox dark by morhetz, https://github.com/morhetz/gruvbox
+# This work is licensed under the terms of the MIT license.
+# For a copy, see https://opensource.org/licenses/MIT.
 
-cursor #f7f1ff
-cursor_text_color #000000
-selection_foreground #363537
-selection_background #f7f1ff
+background  #282828
+foreground  #ebdbb2
 
-# dull black
-color0 #363537
-# light black
-color8 #69676c
+cursor                #928374
 
-# dull red
-color1 #fc618d
+selection_foreground  #928374
+selection_background  #3c3836
+
+color0  #282828
+color8  #928374
+
+# red
+color1                #cc241d
 # light red
-color9 #fc618d
+color9                #fb4934
 
-# dull green
-color2 #7bd88f
+# green
+color2                #98971a
 # light green
-color10 #7bd88f
+color10               #b8bb26
 
 # yellow
-color3 #fce566
+color3                #d79921
 # light yellow
-color11 #fce566
+color11               #fabd2d
 
 # blue
-color4 #fd9353
+color4                #458588
 # light blue
-color12 #fd9353
+color12               #83a598
 
 # magenta
-color5 #948ae3
+color5                #b16286
 # light magenta
-color13 #948ae3
+color13               #d3869b
 
 # cyan
-color6 #5ad4e6
-# light cyan
-color14 #5ad4e6
+color6                #689d6a
+# lighy cyan
+color14               #8ec07c
 
-# dull white
-color7 #f7f1ff
-# bright white
-color15 #f7f1ff
-
+# light gray
+color7                #a89984
+# dark gray
+color15               #928374
 
 
 font_family Cascadia Mono
-font_size 16.0
+font_size 12.0
 adjust_line_height 100% 
 cursor_shape beam 
 enable_audio_bell no
 bell_on_tab no
 remember_window_size no 
-initial_window_width 600 
-initial_window_height 600
+initial_window_width 1200 
+initial_window_height 800
 background_opacity=1.0
 allow_remote_control yes
 
