--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -49,7 +49,7 @@ color7                #a89984
 color15               #928374
 
 
-font_family BigBlue_TerminalPlus Nerd Font Mono
+font_family BigBlue_Terminal_437TT Nerd Font Mono
 font_size 14.0
 adjust_line_height 100% 
 cursor_shape beam 
