--- a/.config/nvim/.gitignore
+++ b/.config/nvim/.gitignore
@@ -1,8 +1,8 @@
-!colors/default_theme.lua
-colors/*
-docs
-ginit.vim
-lua/packer_compiled.lua
-lua/user
-plugin
-spell
+# neovim
+lua/
+profile.json
+
+# cli
+result/
+target/
+packages.json
