--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,7 +14,7 @@ exec-once=dunst
 exec-once=/usr/bin/lxqt-policykit-agent
 exec-once=hyprpaper
 
-exec-once=ironbar
+env = XDG_CURRENT_DESKTOP=sway,XDG_SESSION_TYPE=wayland,XDG_SESSION_DESKTOP=sway
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
@@ -85,8 +85,8 @@ animations {
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     bezier = easeInOutQuad, 0.45, 0, 0.55, 1
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
+    animation = windows, 1, 7, myBezier, slide
+    animation = windowsOut, 1, 7, default, slide
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
