--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -31,10 +31,6 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
 
     follow_mouse = 1
 
@@ -52,9 +48,9 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5
-    gaps_out = 20
-    border_size = 5
+    gaps_in = 2
+    gaps_out = 10
+    border_size = 4
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.active_border = rgba(4776e6ee) rgba(8e54e9ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -65,10 +61,10 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 5
+    rounding = 0
     blur = yes
-    blur_size = 3
-    blur_passes = 1
+    blur_size = 0
+    blur_passes = 0
     blur_new_optimizations = on
 
     drop_shadow = yes
@@ -85,7 +81,7 @@ animations {
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     bezier = easeInOutQuad, 0.45, 0, 0.55, 1
 
-    animation = windows, 1, 7, myBezier, slide
+    animation = windows, 1, 6, default, slide
     animation = windowsOut, 1, 7, default, slide
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
@@ -135,11 +131,10 @@ bind = $mainMod, W, killactive,
 bind = $mainMod, M, exit, 
 # bind = $mainMod, V, togglefloating, 
 bind = $mainMod, R, exec, rofi -show drun
-bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
-bind = $mainMod, L, splitratio, -0.1
-bind = $mainMod, H, splitratio, 0.1
+bind = $mainMod, L, splitratio, -0.02
+bind = $mainMod, H, splitratio, 0.02
 bind = $mainMod, J, cyclenext
 bind = $mainMod, K, cyclenext
 bind = $mainMod, Space, swapnext
