--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,9 +5,9 @@
 
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor=,preferred,auto,auto
-monitor=,3840x2160@60,0x0,2
-# monitor=,1920x1080@120,0x0,1
+#monitor=,preferred,auto,2
+# monitor=,3840x2160@60,0x0,2
+monitor=,1920x1080@60,0x0,1
 
 
 exec-once=dunst
@@ -18,6 +18,7 @@ env = XDG_CURRENT_DESKTOP=sway,XDG_SESSION_TYPE=wayland,XDG_SESSION_DESKTOP=sway
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+exec-once = waybar
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
